# bi-miac

./: .gitignore  pyproject.toml
bi_miac/bi_cmd/: elements.py  rend_temlates.py  setup.py
bi_miac/bi_cmd/handlers/: __init__.py  all_check_types.py  header_add_all.py  header_add_tag.py  header_change_elem.py  header_main.py  header_show.py
bi_miac/bi_cmd/templates/: greetings.j2  header_commands.j2
bi_miac/configs/: base_conf.py
