[tool.poetry]
name = "bi-miac"
version = "0.1.0"
description = ""
authors = ["clfcg <leontev_dma@mail.ru>"]
readme = "README.md"
packages = [{include = "bi_miac"}]

[tool.poetry.dependencies]
python = "^3.10"
strictyaml = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
